<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompanyNewsDetail2">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="665dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postDate">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:contentDescription="@string/system_down_image"
                app:srcCompat="@drawable/_548071478154" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/postInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/albert_sans"
            android:text="@string/posted_info"
            android:textSize="12sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <TextView
            android:id="@+id/news_text"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/albert_sans"
            android:justificationMode="inter_word"
            android:text="@string/news_text2"
            android:textColor="@color/black" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="46dp"
        android:layout_height="25dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="324dp"
        android:fontFamily="@font/albert_sans_medium"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="57dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="31dp"
        android:fontFamily="@font/albert_sans_medium"
        android:gravity="center"
        android:text="@string/sasha_text"
        android:textColor="#174966"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/postDate"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="117dp"
        android:fontFamily="@font/albert_sans"
        android:text="@string/posted_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

</androidx.constraintlayout.widget.ConstraintLayout>