<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newsCard"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_marginHorizontal="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/newsPic"
            android:layout_width="128dp"
            android:layout_height="130dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="17dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/newsTitle"
            app:srcCompat="@drawable/systemdownpic" />

        <TextView
            android:id="@+id/newsTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/albert_sans_medium"
            android:text="@string/system_downtime_scheduled_for_december_9th"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/newsDatePosted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="92dp"
            android:layout_marginBottom="56dp"
            android:fontFamily="@font/albert_sans"
            android:text="@string/_1_day_ago"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newsTitle" />

        <TextView
            android:id="@+id/newsAuthor"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="56dp"
            android:fontFamily="@font/albert_sans"
            android:text="@string/it_support"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/newsDatePosted"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toEndOf="@+id/newsPic"
            app:layout_constraintTop_toBottomOf="@+id/newsTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>